<resources>
    <string name="app_name">Mi Restaurante</string>
    <string name="tvWelcome">Bienvenido a NombreApp!</string>
    <string name="etEmail">Correo</string>
    <string name="etContrasena">Contrasena</string>
    <string name="btLogin">Ingresar</string>
    <string name="btSingup">Registrarse</string>
    <string name="tvForgotPAss">Olvido su contrasena?</string>
    <string name="title_activity_principal">MiRestaurante</string>
    <string name="tvPrecio">Precio:</string>
    <string name="tvDecripcion">Descrioción:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_orders">Ordenes</string>
    <string name="menu_food">Menu</string>
    <string name="menu_Carrito">Carrito</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logoff">Logoff</string>

    <string name="tvIdProducto">Id</string>
    <string name="hi_IdProducto">Ej: 1</string>
    <string name="tvNombreProducto">Nombre Producto</string>
    <string name="hi_NombreProducto">Ej: Combo 3</string>
    <string name="tvDescripcionProducto">Descripción</string>
    <string name="hi_DescripcionProducto">Ej: Pollo frico acompañado con papas fritas y refresco</string>
    <string name="tvPrecio2">Precio</string>
    <string name="hi_Precio">Ej: 2500</string>
    <string name="btCrearProducto">Crear Producto</string>
    <string name="btSeleccionarImagen">Seleccionar Imagen</string>
    <string name="btBuscar">Buscar</string>
    <string name="btGuardar">Guardar</string>
    <string name="btDesactivar">Desactivar</string>

    <string name="tvNuevaorden">Nueva Orden</string>
    <string name="btIngresarOrden">Ingresar Orden</string>

    <string-array name="bebidas_array">
        <item>Coca-Cola</item>
        <item>Coca-Cola Light</item>
        <item>Coca-Cola Zero</item>
        <item>Pepsi</item>
        <item>Pepsi Light</item>
        <item>Fanta Uva</item>
        <item>Fanta Naranja</item>
        <item>Fanta Kolita</item>
        <item>Big-Cola</item>
        <item>Zarsa</item>
        <item>Dr.Pepper</item>
        <item></item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
