<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Ordenes"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_food" />
    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_logoff"
                android:title="@string/menu_logoff" />
        </menu>
    </item>

</menu>
