<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreen">

        <Button
            android:id="@+id/btCrearProducto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/btCrearProducto"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcionProducto" />

        <Button
            android:id="@+id/btSeleccionarImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_constraintBottom_toTopOf="@+id/etNombreProducto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivImagen"
            app:layout_constraintTop_toBottomOf="@+id/etIdProducto" />

        <EditText
            android:id="@+id/etNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/hi_NombreProducto"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/ivImagen"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/etPrecioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/hi_Precio"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/ivImagen"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/etIdProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hi_IdProducto"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/ivImagen"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDescripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hi_DescripcionProducto"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toEndOf="@+id/ivImagen"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="55dp"
            android:text="@string/tvPrecio2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/tvIdProducto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="55dp"
            android:text="@string/tvDescripcionProducto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/tvNombreProducto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImagen" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>